add cell_description example for wrapping struct and enums

--- a/src/makefile
+++ b/src/makefile
@@ -2,7 +2,7 @@ SUFFIX=`python3-config --extension-suffix`
 PYTHON_ARGS=`pkg-config --cflags --libs python3`
 CXX_FLAGS=-std=c++14 -shared -fPIC
 
-all: module
+all: module group
 
 print.o: print.cpp
 	g++ ${CXX_FLAGS} -I../include -I../pybind11/include print.cpp -c
@@ -11,7 +11,12 @@ module: module.cpp print.o ../include/sequence.hpp
 	g++ ${CXX_FLAGS} -I../include -I../pybind11/include ${PYTHON_ARGS} module.cpp -o module${SUFFIX} print.o
 	touch module
 
+group: group.cpp ../include/group_description.hpp
+	g++ ${CXX_FLAGS} -I../include -I../pybind11/include ${PYTHON_ARGS} group.cpp -o group${SUFFIX}
+	touch group
+
 clean:
 	rm -f *.so
 	rm -f *.o
 	rm -f module
+	rm -f group
