--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # vim temporary files
 .*.swp
 .*.swn
@@ -9,5 +8,6 @@ a.out
 
 # library and marker files for python modules
 *.so
-module
-group
+
+# build
+build
