--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,2 +1,3 @@
 pybind11_add_module(group group.cpp)
 pybind11_add_module(sequence sequence.cpp)
+target_link_libraries(sequence LINK_PUBLIC example)
