add some more examples

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,3 +1,5 @@
 pybind11_add_module(group group.cpp)
 pybind11_add_module(sequence sequence.cpp)
+pybind11_add_module(inheritance inheritance.cpp)
+pybind11_add_module(ref ref.cpp)
 target_link_libraries(sequence LINK_PUBLIC example)
