--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 # required to use in pthon .so files
 set(CMAKE_CXX_FLAGS "-fPIC")
 
+find_package(MPI REQUIRED CXX)
+
 # Set up pybind.
 # Add support for pybind by adding the directory of pybind11, instead of using
 # find_package().
